--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.16.0",
     "yup": "^1.3.2"
   },
